--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#" class="text-xl font-bold text-primary font-pacifico">ConceptDash</a>
       </div><!-- Navigation Links -->
   <nav class="flex space-x-6 text-sm items-center">
-    <a href="#" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-home-line mr-1"></i>Home</a>
+    <a href="index.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-home-line mr-1"></i>Home</a>
     <a href="#categoriesContainer" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-apps-line mr-1"></i>Categories</a>
     <a href="add.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-add-line mr-1"></i>Add Item</a>
     <a href="#" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-shopping-cart-line mr-1"></i>Cart</a>
