--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ConceptDash - Authentic Products</title>  <!-- Tailwind CSS via CDN -->  <script src="https://cdn.tailwindcss.com"></script>  <script>
@@ -19,21 +18,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />  <!-- Remix Icon -->  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" />  <!-- Firebase -->  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>  <!-- Custom CSS -->  <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="bg-gray-50">  <!-- Header Section -->  <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
+<body class="bg-gray-50">
+  <!-- Header Section -->
+  <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
       <!-- Logo -->
       <div class="flex items-center">
-        <a href="#" class="text-xl font-bold text-primary font-pacifico">ConceptDash</a>
-      </div><!-- Navigation Links -->
-  <nav class="flex space-x-6 text-sm items-center">
-    <a href="index.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-home-line mr-1"></i>Home</a>
-    <a href="#categoriesContainer" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-apps-line mr-1"></i>Categories</a>
-    <a href="add.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-add-line mr-1"></i>Add Item</a>
-    <a href="#" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-shopping-cart-line mr-1"></i>Cart</a>
-    <a href="#" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-user-line mr-1"></i>Login</a>
-  </nav>
-</div>
-
+        <a href="index.html" class="text-xl font-bold text-primary font-pacifico">ConceptDash</a>
+      </div>
+      <!-- Navigation Links -->
+      <nav class="flex space-x-6 text-sm items-center">
+        <a href="index.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-home-line mr-1"></i>Home</a>
+        <a href="catgry.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-apps-line mr-1"></i>Categories</a>
+        <a href="add.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-add-line mr-1"></i>Add Item</a>
+        <a href="cart.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-shopping-cart-line mr-1"></i>Cart</a>
+        <a href="auth.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-user-line mr-1"></i>Login</a>
+      </nav>
+    </div>
   </header>  <!-- Main Content -->  <main class="pt-24 px-4 max-w-7xl mx-auto">
     <!-- Categories + Products Display -->
     <section id="categoriesContainer" class="mt-10">
@@ -42,4 +43,4 @@
   </main>  <!-- Footer -->  <footer class="bg-white text-center py-4 text-sm text-gray-600 mt-10">
     &copy; 2025 ConceptDash. All rights reserved.
   </footer>  <!-- JS Logic -->  <script src="app.js"></script></body>
-</html>
+        </html>
