--- a/add.html
+++ b/add.html
@@ -23,7 +23,7 @@
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
       <div class="text-xl font-bold text-primary">ConceptDash</div>
       <nav class="flex space-x-6 text-sm items-center">
-        <a href="#" class="flex items-center text-gray-700 hover:text-primary">
+        <a href="index.html" class="flex items-center text-gray-700 hover:text-primary">
           <i class="ri-home-line mr-1 text-lg"></i> Home
         </a>
         <a href="#categoriesContainer" class="flex items-center text-gray-700 hover:text-primary">
