--- a/add.html
+++ b/add.html
@@ -1,8 +1,13 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ConceptDash - Authentic Products</title>  <!-- Tailwind CSS -->  <script src="https://cdn.tailwindcss.com"></script>  <script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Add Item - ConceptDash</title>
+
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
     tailwind.config = {
       theme: {
         extend: {
@@ -15,32 +20,33 @@
         }
       }
     }
-  </script>  <!-- Firebase -->  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>  <!-- Remix Icon -->  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" />
+  </script>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+
+  <!-- Remix Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" />
 </head>
 <body class="bg-gray-50 font-sans">
+
   <!-- Navbar -->
   <header class="fixed top-0 left-0 right-0 bg-white shadow z-50">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
       <div class="text-xl font-bold text-primary">ConceptDash</div>
       <nav class="flex space-x-6 text-sm items-center">
-        <a href="index.html" class="flex items-center text-gray-700 hover:text-primary">
-          <i class="ri-home-line mr-1 text-lg"></i> Home
-        </a>
-        <a href="#categoriesContainer" class="flex items-center text-gray-700 hover:text-primary">
-          <i class="ri-apps-line mr-1 text-lg"></i> Categories
-        </a>
-        <a href="#addItemForm" class="flex items-center text-gray-700 hover:text-primary">
-          <i class="ri-add-line mr-1 text-lg"></i> Add Item
-        </a>
-        <a href="#" class="flex items-center text-gray-700 hover:text-primary">
-          <i class="ri-shopping-cart-line mr-1 text-lg"></i> Cart
-        </a>
-        <a href="#" class="flex items-center text-gray-700 hover:text-primary">
-          <i class="ri-user-line mr-1 text-lg"></i> Login
-        </a>
+        <a href="index.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-home-line mr-1 text-lg"></i> Home</a>
+        <a href="catgry.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-apps-line mr-1 text-lg"></i> Categories</a>
+        <a href="add.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-add-line mr-1 text-lg"></i> Add Item</a>
+        <a href="cart.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-shopping-cart-line mr-1 text-lg"></i> Cart</a>
+        <a href="auth.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-user-line mr-1 text-lg"></i> Login</a>
       </nav>
     </div>
-  </header>  <!-- Main Content -->  <main class="pt-24 px-4">
+  </header>
+
+  <!-- Main Content -->
+  <main class="pt-24 px-4">
     <!-- Add Item Form -->
     <section class="max-w-md mx-auto p-4 bg-white rounded shadow space-y-4 mt-4">
       <h2 class="text-lg font-bold text-center text-primary">Add New Item</h2>
@@ -55,13 +61,66 @@
           <option value="Clothing">Clothing</option>
           <option value="Beauty">Beauty</option>
         </select>
-        <input type="file" id="image" accept="image/*" class="w-full" required />
+        <input type="url" id="imageUrl" placeholder="Image URL" class="w-full border p-2 rounded" required />
         <button type="submit" class="bg-primary text-white py-2 px-4 rounded w-full">Add Item</button>
       </form>
-    </section><!-- Categories Section -->
-<section id="categoriesContainer" class="mt-10"></section>
+      <p id="statusMessage" class="text-center text-sm mt-2 text-green-600"></p>
+    </section>
+  </main>
 
-  </main>  <!-- Footer -->  <footer class="bg-white text-center py-4 text-sm text-gray-600 mt-10">
+  <!-- Footer -->
+  <footer class="bg-white text-center py-4 text-sm text-gray-600 mt-10">
     &copy; 2025 ConceptDash. All rights reserved.
-  </footer>  <!-- App JS -->  <script src="app.js"></script></body>
-</html>
+  </footer>
+
+  <!-- Firebase Setup and Logic -->
+  <script>
+    // Your Firebase Config
+    const firebaseConfig = {
+      apiKey: "AIzaSyD13EXAMPLE",
+      authDomain: "food-ae7ff.firebaseapp.com",
+      projectId: "food-ae7ff",
+      storageBucket: "food-ae7ff.appspot.com",
+      messagingSenderId: "256095054979",
+      appId: "1:256095054979:web:22de2c16f9acb15f65a08f"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
+    // Form submission
+    document.getElementById('addItemForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value.trim();
+      const description = document.getElementById('description').value.trim();
+      const price = parseFloat(document.getElementById('price').value);
+      const category = document.getElementById('category').value;
+      const imageUrl = document.getElementById('imageUrl').value.trim();
+      const statusMessage = document.getElementById('statusMessage');
+
+      if (!name || !price || !category || !imageUrl) {
+        statusMessage.textContent = "Please fill all required fields!";
+        return;
+      }
+
+      try {
+        await db.collection('products').add({
+          name,
+          description,
+          price,
+          category,
+          imageUrl,
+          timestamp: firebase.firestore.FieldValue.serverTimestamp()
+        });
+        statusMessage.textContent = "Item added successfully!";
+        document.getElementById('addItemForm').reset();
+      } catch (error) {
+        console.error("Error adding item:", error);
+        statusMessage.textContent = "Error adding item!";
+      }
+    });
+  </script>
+</body>
+        </html>
