--- a/add.html
+++ b/add.html
@@ -58,7 +58,7 @@
           <option value="" disabled selected>Select Category</option>
           <option value="Phones">Phones</option>
           <option value="Laptops">Laptops</option>
-          <option value="Clothing">Clothing</option>
+          <option value="Clothing">cameras</option>
           <option value="Beauty">Beauty</option>
         </select>
         <input type="url" id="imageUrl" placeholder="Image URL" class="w-full border p-2 rounded" required />
