--- a/add.html
+++ b/add.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Add Item - ConceptDash</title>
+  <title>Admin Panel - ConceptDash</title>
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -12,60 +12,65 @@
       theme: {
         extend: {
           colors: {
-            primary: '#e63946'
-          },
-          borderRadius: {
-            button: '8px'
+            primary: '#16a34a'
           }
         }
       }
     }
   </script>
 
-  <!-- Firebase (Compat version) -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 
-  <!-- Remix Icons -->
+  <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" />
 </head>
-<body class="bg-gray-50 font-sans">
+<body class="bg-gray-100 font-sans">
 
-  <!-- Navbar -->
+  <!-- Header -->
   <header class="fixed top-0 left-0 right-0 bg-white shadow z-50">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
       <div class="text-xl font-bold text-primary">ConceptDash</div>
       <nav class="flex space-x-6 text-sm items-center">
-        <a href="index.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-home-line mr-1 text-lg"></i> Home</a>
-        <a href="catgry.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-apps-line mr-1 text-lg"></i> Categories</a>
-        <a href="add.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-add-line mr-1 text-lg"></i> Add Item</a>
-        <a href="cart.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-shopping-cart-line mr-1 text-lg"></i> Cart</a>
-        <a href="auth.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-user-line mr-1 text-lg"></i> Login</a>
+        <a href="index.html" class="hover:text-primary">Home</a>
+        <a href="catgry.html" class="hover:text-primary">Categories</a>
+        <a href="#" class="hover:text-primary font-semibold">Add/Manage</a>
+        <a href="cart.html" class="hover:text-primary">Cart</a>
+        <a href="auth.html" class="hover:text-primary">Login</a>
       </nav>
     </div>
   </header>
 
   <!-- Main Content -->
-  <main class="pt-24 px-4">
-    <!-- Add Item Form -->
-    <section class="max-w-md mx-auto p-4 bg-white rounded shadow space-y-4 mt-4">
-      <h2 class="text-lg font-bold text-center text-primary">Add New Item</h2>
-      <form id="addItemForm" class="space-y-4">
-        <input type="text" id="name" placeholder="Item Name" class="w-full border p-2 rounded" required />
-        <textarea id="description" placeholder="Description" class="w-full border p-2 rounded"></textarea>
-        <input type="number" id="price" placeholder="Price" class="w-full border p-2 rounded" required />
-        <select id="category" class="w-full border p-2 rounded" required>
-          <option value="" disabled selected>Select Category</option>
-          <option value="Phones">Phones</option>
-          <option value="Laptops">Laptops</option>
-          <option value="Cameras">cameras</option>
-          <option value="Beauty">Beauty</option>
-        </select>
-        <input type="url" id="imageUrl" placeholder="Image URL" class="w-full border p-2 rounded" required />
-        <button type="submit" class="bg-primary text-white py-2 px-4 rounded w-full">Add Item</button>
+  <main class="pt-24 px-4 max-w-6xl mx-auto space-y-10">
+    
+    <!-- ADD ITEM -->
+    <section class="bg-white p-6 rounded shadow">
+      <h2 class="text-xl font-bold text-primary mb-4">➕ Add New Item</h2>
+      <form id="addItemForm" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <input type="text" id="name" placeholder="Item Name" class="border p-2 rounded" required />
+        <input type="number" id="price" placeholder="Price" class="border p-2 rounded" required />
+        <input type="text" id="category" placeholder="Category" class="border p-2 rounded" required />
+        <input type="url" id="imageUrl" placeholder="Image URL" class="border p-2 rounded" required />
+        <textarea id="description" placeholder="Description" class="md:col-span-2 border p-2 rounded"></textarea>
+        <button type="submit" class="md:col-span-2 bg-primary text-white py-2 px-4 rounded hover:bg-green-700">Add Item</button>
       </form>
-      <p id="statusMessage" class="text-center text-sm mt-2"></p>
+      <p id="statusMessage" class="text-sm mt-2 text-center"></p>
     </section>
+
+    <!-- VIEW + EDIT ITEMS -->
+    <section class="bg-white p-6 rounded shadow">
+      <div class="flex justify-between items-center mb-4 flex-wrap gap-4">
+        <h2 class="text-xl font-bold text-primary">🛠️ Manage Items</h2>
+        <div class="flex gap-2">
+          <input type="text" id="searchInput" placeholder="Search by name..." class="border p-2 rounded shadow-sm" />
+          <button id="viewItemsBtn" class="bg-primary text-white px-4 py-2 rounded hover:bg-green-700">View All</button>
+        </div>
+      </div>
+      <div id="productList" class="space-y-6"></div>
+    </section>
+
   </main>
 
   <!-- Footer -->
@@ -75,7 +80,6 @@
 
   <!-- Firebase Logic -->
   <script>
-    // ✅ Firebase Config (your actual project)
     const firebaseConfig = {
       apiKey: "AIzaSyAHhmbgDA_D13LcnEWgtr5Unu7uihBpGPE",
       authDomain: "food-ae7ff.firebaseapp.com",
@@ -85,46 +89,105 @@
       appId: "1:256095054979:web:22de2c16f9acb15f65a08f"
     };
 
-    // ✅ Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    // ✅ Handle Add Form
+    // Add item
     document.getElementById('addItemForm').addEventListener('submit', async (e) => {
       e.preventDefault();
 
       const name = document.getElementById('name').value.trim();
-      const description = document.getElementById('description').value.trim();
       const price = parseFloat(document.getElementById('price').value);
-      const category = document.getElementById('category').value;
+      const category = document.getElementById('category').value.trim();
       const imageUrl = document.getElementById('imageUrl').value.trim();
+      const description = document.getElementById('description').value.trim();
       const statusMessage = document.getElementById('statusMessage');
 
       if (!name || isNaN(price) || !category || !imageUrl) {
         statusMessage.textContent = "❌ Please fill all fields correctly!";
-        statusMessage.className = "text-red-600 text-center text-sm";
+        statusMessage.className = "text-red-600 text-center";
         return;
       }
 
       try {
-        await db.collection('products').add({
-          name,
-          description,
-          price,
-          category,
-          imageUrl,
-          timestamp: firebase.firestore.FieldValue.serverTimestamp()
-        });
-
+        await db.collection('products').add({ name, price, category, imageUrl, description, timestamp: firebase.firestore.FieldValue.serverTimestamp() });
         statusMessage.textContent = "✅ Item added successfully!";
-        statusMessage.className = "text-green-600 text-center text-sm";
+        statusMessage.className = "text-green-600 text-center";
         document.getElementById('addItemForm').reset();
       } catch (error) {
-        console.error("Error adding item:", error);
+        console.error(error);
         statusMessage.textContent = "❌ Error adding item!";
-        statusMessage.className = "text-red-600 text-center text-sm";
+        statusMessage.className = "text-red-600 text-center";
       }
     });
+
+    // View + Search + Edit
+    const viewBtn = document.getElementById("viewItemsBtn");
+    const productList = document.getElementById("productList");
+    const searchInput = document.getElementById("searchInput");
+    let allProducts = [];
+
+    viewBtn.addEventListener("click", fetchProducts);
+    searchInput.addEventListener("input", filterProducts);
+
+    async function fetchProducts() {
+      const snapshot = await db.collection("products").orderBy("timestamp", "desc").get();
+      allProducts = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+      displayProducts(allProducts);
+    }
+
+    function filterProducts() {
+      const keyword = searchInput.value.toLowerCase();
+      const filtered = allProducts.filter(p => p.name.toLowerCase().includes(keyword));
+      displayProducts(filtered);
+    }
+
+    function displayProducts(products) {
+      productList.innerHTML = "";
+
+      if (products.length === 0) {
+        productList.innerHTML = `<p class="text-gray-500 text-center">No products found.</p>`;
+        return;
+      }
+
+      products.forEach(product => {
+        const div = document.createElement("div");
+        div.className = "bg-gray-50 p-4 rounded shadow";
+        div.innerHTML = `
+          <div class="md:flex gap-4">
+            <img src="${product.imageUrl}" alt="${product.name}" class="w-full md:w-48 h-40 object-cover rounded mb-4 md:mb-0" />
+            <div class="flex-1 space-y-2">
+              <input type="text" class="w-full border p-2 rounded" value="${product.name}" data-id="${product.id}" data-field="name" />
+              <textarea class="w-full border p-2 rounded" data-id="${product.id}" data-field="description">${product.description || ""}</textarea>
+              <input type="number" class="w-full border p-2 rounded" value="${product.price}" data-id="${product.id}" data-field="price" />
+              <input type="text" class="w-full border p-2 rounded" value="${product.category}" data-id="${product.id}" data-field="category" />
+              <input type="url" class="w-full border p-2 rounded" value="${product.imageUrl}" data-id="${product.id}" data-field="imageUrl" />
+              <button class="saveBtn bg-primary text-white px-4 py-2 rounded hover:bg-green-700 mt-2" data-id="${product.id}">Save</button>
+            </div>
+          </div>
+        `;
+        productList.appendChild(div);
+      });
+
+      document.querySelectorAll(".saveBtn").forEach(btn => {
+        btn.addEventListener("click", async () => {
+          const id = btn.dataset.id;
+          const inputs = document.querySelectorAll(`[data-id="${id}"]`);
+          const updates = {};
+          inputs.forEach(input => {
+            updates[input.dataset.field] = input.value;
+          });
+
+          try {
+            await db.collection("products").doc(id).update(updates);
+            alert("✅ Product updated!");
+          } catch (error) {
+            console.error(error);
+            alert("❌ Failed to update.");
+          }
+        });
+      });
+    }
   </script>
 </body>
-            </html>
+    </html>
