--- a/cart.html
+++ b/cart.html
@@ -65,7 +65,9 @@
     <div id="cart-total" class="text-right text-lg font-bold mt-6"></div>
 
     <div class="text-right mt-4">
-      <button id="checkout-btn" class="bg-primary text-white px-6 py-2 rounded-button hover:bg-red-600">Proceed to Checkout</button>
+      <a href="checkout.html" id="checkout-btn" class="bg-green-600 text-white px-6 py-2 rounded-button hover:bg-green-700 inline-block">
+        Proceed to Checkout
+      </a>
     </div>
   </main>
 
@@ -74,19 +76,20 @@
     &copy; 2025 ConceptDash. All rights reserved.
   </footer>
 
-  <!-- Cart Logic -->
+  <!-- Cart Script -->
   <script>
     const cart = JSON.parse(localStorage.getItem('cart')) || [];
     const container = document.getElementById('cart-container');
     const totalDisplay = document.getElementById('cart-total');
+    const checkoutBtn = document.getElementById("checkout-btn");
 
     let total = 0;
 
     if (cart.length === 0) {
       container.innerHTML = `<p class="text-gray-600">Your cart is empty.</p>`;
-      document.getElementById("checkout-btn").classList.add("hidden");
+      checkoutBtn.classList.add("hidden");
     } else {
-      cart.forEach(item => {
+      cart.forEach((item, index) => {
         const subtotal = item.price * item.quantity;
         total += subtotal;
 
@@ -96,8 +99,9 @@
             <div class="flex-1">
               <h2 class="text-lg font-semibold text-gray-800">${item.name}</h2>
               <p class="text-sm text-gray-600">KES ${item.price.toFixed(2)} x ${item.quantity}</p>
-              <p class="text-sm font-bold text-gray-800">Subtotal: KES ${(subtotal).toFixed(2)}</p>
+              <p class="text-sm font-bold text-gray-800">Subtotal: KES ${subtotal.toFixed(2)}</p>
             </div>
+            <button onclick="removeItem(${index})" class="text-red-600 hover:underline text-sm">Remove</button>
           </div>
         `;
         container.innerHTML += itemHTML;
@@ -106,9 +110,11 @@
       totalDisplay.innerText = `Total: KES ${total.toFixed(2)}`;
     }
 
-    document.getElementById("checkout-btn").addEventListener("click", () => {
-      alert("Checkout functionality coming soon!");
-    });
+    function removeItem(index) {
+      cart.splice(index, 1);
+      localStorage.setItem('cart', JSON.stringify(cart));
+      location.reload();
+    }
   </script>
 
 </body>
